# old-aartfaac-imaging-pipeline

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  README.rst
cmake/: sources.cmake  version.h.in
cmake/modules/: FindCasacore.cmake  FindCppUnit.cmake  FindEigen3.cmake  FindLofar.cmake  FindMatlab.cmake  FindPelican.cmake
data/: lofar-release_2_1_1.deploy  lofar-release_2_1_1.deploy.pub  virtfix.patch
data/antennasets/: lba_inner.dat.in  lba_outer.dat.in
data/xml/: emulatorConfig.xml.in  pipelineConfig.xml.in  serverConfig.xml.in
scripts/: aartfaac-system-start.cmake  aartfaac-system-start.py  aartfaac-system-start.py.in  antennaset.py  calc_uvw.py  gcc-tests.sh  matlabenv.sh  plot_acm.py  scanbuild.sh  start-emulator.py.in  start-pipeline.py.in  start-server.py.in  start_aartfaac.py.in  start_emulator.py  start_emulator.py.in  start_pipeline.py  start_pipeline.py.in  start_server.py  start_server.py.in
scripts/das4/: imaging.job  start.sh  stop.sh
scripts/xml/: pipelineConfig.xml.in  serverConfig.xml.in
src/: Constants.h  Constants.h.in  Macros.h
src/emulator/: UdpPacket.h  UniboardEmulator.cpp  UniboardEmulator.h  main.cpp
src/emulator/service/: ServiceEmulator.cpp  ServiceEmulator.h  ServiceUdpPacket.h
src/emulator/stream/: StreamEmulator.cpp  StreamEmulator.h  StreamPacket.h  StreamUdpPacket.h
src/emulator/test/: UniboardEmulatorTest.cpp  UniboardEmulatorTest.h  main.cpp
src/emulators/service/: ServiceEmulator.cpp  ServiceEmulator.h  ServiceUdpPacket.h  main.cpp
src/emulators/stream/: StreamEmulator.cpp  StreamEmulator.h  main.cpp
src/emulators/test/: UniboardEmulatorTest.cpp  UniboardEmulatorTest.h  main.cpp
src/matlabbridge/: CMakeLists.txt
src/matlabbridge/src/cpp/: MatlabBridge.cpp  MatlabBridge.h
src/matlabbridge/src/matlab/: JulianDay.m  acc.mat  applycal.m  cal_ext_stefcal.m  cal_uvmask.m  fft_imager.m  fft_imager_sjw.m  fft_imager_sjw_radec.m  frobenius_norm.m  gen_flagged_uvloc.m  genradecskyimage.m  imgdiff.m  lmtoradecimage.m  matadd.m  matelemul.m  normalize.m  pelican_pipesim.m  pelican_pipesim_storevars.m  pelican_sunAteamsub.m  precessionMatrix.m  readms2float.m  statcal_stefcal.m  statcal_vlss.m
src/metadata/: MetaData.cpp  MetaData.h  main.cpp
src/pipeline/: DirectDataClient.cpp  ServiceAdapter.cpp  ServiceAdapter.h  ServiceBlob.cpp  ServiceBlob.h  StreamAdapter.cpp  StreamAdapter.h  StreamBlob.cpp  StreamBlob.h  StreamChunker.cpp  StreamChunker.h  StreamPacket.h  UniboardAdapter.cpp  UniboardAdapter.h  UniboardDataBlob.cpp  UniboardDataBlob.h  UniboardPipeline.cpp  UniboardPipeline.h  UniboardServiceAdapter.cpp  UniboardServiceAdapter.h  UniboardServiceBlob.cpp  UniboardServiceBlob.h  UniboardStorage.cpp  UniboardStorage.h  main.cpp
src/pipeline/modules/calibrator/: Calibrator.cpp  Calibrator.h
src/pipeline/modules/flagger/: Flagger.cpp  Flagger.h
src/pipeline/modules/imager/: Imager.cpp  Imager.h
src/pipeline/modules/imager/matlabbridge/: CMakeLists.txt
src/pipeline/modules/imager/matlabbridge/src/cpp/: matlabbridge.cpp  matlabbridge.h
src/pipeline/modules/matlabbridge/: CMakeLists.txt  matlabenv.sh
src/pipeline/modules/matlabbridge/src/cpp/: matlabbridge.cpp  matlabbridge.h  wrapper.cpp
src/pipeline/modules/matlabbridge/src/matlab/: fft_imager.m
src/pipeline/modules/output/: CasaImageStorage.cpp  CasaImageStorage.h  TiffStorage.cpp  TiffStorage.h  Visibilities.cpp  Visibilities.h
src/pipeline/test/: CalibratorTest.cpp  CalibratorTest.h  FlaggerTest.cpp  FlaggerTest.h  ImagerTest.cpp  ImagerTest.h  main.cpp
src/regridder/: regrid.cpp
src/server/: DataChunker.cpp  DataChunker.h  ServiceChunker.cpp  ServiceChunker.h  ServiceUniboardChunker.cpp  ServiceUniboardChunker.h  StreamChunker.cpp  StreamChunker.h  StreamUniboardChunker.cpp  StreamUniboardChunker.h  UniboardChunker.cpp  UniboardChunker.h  UniboardClient.cpp  UniboardClient.h  main.cpp  main.cpp.autosave
src/server/test/: main.cpp
src/utilities/: AntennaPositions.cpp  AntennaPositions.h  Logger.cpp  Logger.h  NMSMax.h  Simplex.h  Statistics.cpp  Statistics.h  UVWParser.cpp  UVWParser.h  Utils.cpp  Utils.h  Vis2Mat.cpp  apl5sbmovie.py  aplmovie.py  casa2fits.py  casaaddimg.py  casasubimg.py  halfprecision.c  plot5sbparm.sh  plotmonparm.sh  timediffimg.m  wsfposoff.sh
src/utilities/monitoring/: Server.cpp  Server.h  TcpAcceptor.cpp  TcpAcceptor.h  TcpStream.cpp  TcpStream.h  Thread.cpp  Thread.h
src/utilities/monitoring/scripts/: afaacmon.py  monitoring.txt  sendtcp.py
src/utilities/test/: UtilitiesTest.cpp  UtilitiesTest.h  main.cpp
src/xml/: emulatorConfig.xml  pipelineConfig.xml  serverConfig.xml
